--- a/src/renderer/app/app.component.html
+++ b/src/renderer/app/app.component.html
@@ -1,4 +1,4 @@
-<app-title-bar [windowTitle]="widowTitle" [isMaximized]="isMaximized" (closeButtonClick)="onCloseButtonClick()"
+<app-title-bar [windowTitle]="windowTitle" [isMaximized]="isMaximized" (closeButtonClick)="onCloseButtonClick()"
   (maximizeRestoreButtonClick)="onMaximizeRestoreButtonClick()" (minimizeButtonClick)="onMinimizeButtonClick()">
 </app-title-bar>
 <div class="contents">
