--- a/src/renderer/app/components/title-bar/title-bar.component.scss
+++ b/src/renderer/app/components/title-bar/title-bar.component.scss
@@ -7,10 +7,19 @@ $contents-margin: 8px;
 .title-bar {
   width: 100%;
   height: $title-bar-height;
-  -weblit-user-select: none;
+  -webkit-user-select: none;
 }
 
-.title-bar.window-title {
+.drag-region {
+  position: absolute;
+  left: $drag-region-margin;
+  top: $drag-region-margin;
+  height: calc(#{$title-bar-height} - #{$drag-region-margin});
+  width: calc(100% - #{$drag-region-margin} - #{$title-bar-button-width} * 3);
+  -webkit-app-region: drag;
+}
+
+.window-title {
   font-size: 12px;
   text-align: center;
   line-height: $title-bar-height;
@@ -22,14 +31,6 @@ $contents-margin: 8px;
   height: 100%;
 }
 
-.title-bar.drag-region {
-  position: absolute;
-  left: $drag-region-margin;
-  top: $drag-region-margin;
-  height: calc(#{$title-bar-height} - #{$drag-region-margin});
-  width: calc(100% - #{$drag-region-margin} - #{$title-bar-button-width} * 3);
-  -webkit-app-region: drag;
-}
 
 .title-bar.button.close {
   position: relative;
