--- a/src/renderer/app/components/title-bar/title-bar.component.html
+++ b/src/renderer/app/components/title-bar/title-bar.component.html
@@ -4,5 +4,5 @@
   <div class="title-bar button" [ngClass]="isMaximized ? 'restore' : 'maximize'"
     (click)="maximizeRestoreButtonClick.emit()"></div>
   <div class="title-bar button minimize" (click)="minimizeButtonClick.emit()"></div>
-  <div class="window-title">{{windowTitle}}</div>
+  <div class="window-title" [ngClass]="!isFocused ? 'blur' : ''">{{windowTitle}}</div>
 </div>
