--- a/src/renderer/app/components/title-bar/title-bar.component.html
+++ b/src/renderer/app/components/title-bar/title-bar.component.html
@@ -1,6 +1,6 @@
 <div class="title-bar">
   <div class="drag-region"></div>
-  <div class="title-bar button close" (click)="closeButtonClick.emit()"></div>
+  <div class="close-button" (click)="closeButtonClick.emit()"></div>
   <div class="title-bar button" [ngClass]="isMaximized ? 'restore' : 'maximize'"
     (click)="maximizeRestoreButtonClick.emit()"></div>
   <div class="title-bar button minimize" (click)="minimizeButtonClick.emit()"></div>
