--- a/src/renderer/app/components/title-bar/title-bar.component.html
+++ b/src/renderer/app/components/title-bar/title-bar.component.html
@@ -1,8 +1,8 @@
 <div class="title-bar">
   <div class="drag-region"></div>
-  <div class="close-button" (click)="closeButtonClick.emit()"></div>
+  <div class="close-button" [ngClass]="{'blur': !isFocused}" (click)="closeButtonClick.emit()"></div>
   <div class="title-bar button" [ngClass]="isMaximized ? 'restore' : 'maximize'"
     (click)="maximizeRestoreButtonClick.emit()"></div>
   <div class="title-bar button minimize" (click)="minimizeButtonClick.emit()"></div>
-  <div class="window-title" [ngClass]="!isFocused ? 'blur' : ''">{{windowTitle}}</div>
+  <div class="window-title" [ngClass]="{'blur': !isFocused}">{{windowTitle}}</div>
 </div>
