--- a/src/renderer/app/components/title-bar/title-bar.component.html
+++ b/src/renderer/app/components/title-bar/title-bar.component.html
@@ -1,7 +1,7 @@
 <div class="title-bar">
   <div class="drag-region"></div>
   <div class="close-button" [ngClass]="{'blur': !isFocused}" (click)="closeButtonClick.emit()"></div>
-  <div class="title-bar button" [ngClass]="isMaximized ? 'restore' : 'maximize'"
+  <div [ngClass]="{'title-bar button restore': isMaximized, 'maximize-button': !isMaximized}"
     (click)="maximizeRestoreButtonClick.emit()"></div>
   <div class="title-bar button minimize" (click)="minimizeButtonClick.emit()"></div>
   <div class="window-title" [ngClass]="{'blur': !isFocused}">{{windowTitle}}</div>
