--- a/src/renderer/app/components/title-bar/title-bar.component.scss
+++ b/src/renderer/app/components/title-bar/title-bar.component.scss
@@ -101,6 +101,14 @@ $contents-margin: 8px;
   background-color: #e5e5e5;
 }
 
+.maximize-button.blur:before {
+  @include maximize-button-base(#999999);
+}
+
+.maximize-button.blur:hover:before {
+  @include maximize-button-base(#000000);
+}
+
 .title-bar.button.restore {
   position: relative;
   background-color: transparent;
