Add component test

--- a/src/renderer/app/app.component.html
+++ b/src/renderer/app/app.component.html
@@ -1,6 +1,6 @@
 <app-title-bar [isFocused]="isFocused" [isMaximized]="isMaximized" [windowTitle]="windowTitle"
-  (closeButtonClick)="onCloseButtonClick()" (maximizeRestoreButtonClick)="onMaximizeRestoreButtonClick()"
-  (minimizeButtonClick)="onMinimizeButtonClick()">
+  (onCloseButtonClick)="onCloseButtonClick()" (onMaximizeRestoreButtonClick)="onMaximizeRestoreButtonClick()"
+  (onMinimizeButtonClick)="onMinimizeButtonClick()">
 </app-title-bar>
 <div class="contents">
   hello world!
