Use prettier for html

--- a/src/renderer/app/app.component.html
+++ b/src/renderer/app/app.component.html
@@ -1,13 +1,22 @@
-<app-title-bar [isFocused]="isFocused" [isMaximized]="isMaximized" [windowTitle]="windowTitle"
-  (onCloseButtonClick)="onCloseButtonClick()" (onMaximizeResizeButtonClick)="onMaximizeResizeButtonClick()"
-  (onMinimizeButtonClick)="onMinimizeButtonClick()">
+<app-title-bar
+  [isFocused]="isFocused"
+  [isMaximized]="isMaximized"
+  [windowTitle]="windowTitle"
+  (onCloseButtonClick)="onCloseButtonClick()"
+  (onMaximizeResizeButtonClick)="onMaximizeResizeButtonClick()"
+  (onMinimizeButtonClick)="onMinimizeButtonClick()"
+>
 </app-title-bar>
 <div class="contents">
   hello world!
   <h2 translate>language</h2>
   <select (change)="changeLanguage($event.target.value)">
-    <option *ngFor="let lang of supportLanguages" [value]="lang.language" [selected]="equalLanguage(lang.language)">
-      <span>{{lang.label}}</span>
+    <option
+      *ngFor="let lang of supportLanguages"
+      [value]="lang.language"
+      [selected]="equalLanguage(lang.language)"
+    >
+      <span>{{ lang.label }}</span>
     </option>
   </select>
 </div>
