--- a/src/renderer/app/app.component.html
+++ b/src/renderer/app/app.component.html
@@ -9,6 +9,8 @@
 </app-title-bar>
 <div class="contents">
   hello world!
+  <h2 translate>counter</h2>
+  <app-counter-container></app-counter-container>
   <h2 translate>language</h2>
   <select (change)="changeLanguage($event.target.value)">
     <option
