--- a/src/renderer/app/components/counter/counter-container/counter-container.component.html
+++ b/src/renderer/app/components/counter/counter-container/counter-container.component.html
@@ -1,5 +1,5 @@
 <app-counter
-  [count]="count"
+  [count]="count$ | async"
   (increaseClick)="onIncreaseClick($event)"
   (decreaseClick)="onDecreaseClick($event)"
   (resetClick)="onResetClick()"
