Change name of field and method

--- a/src/renderer/app/components/counter/counter/counter.component.html
+++ b/src/renderer/app/components/counter/counter/counter.component.html
@@ -1,6 +1,6 @@
-<button (click)="decreaseClick.emit(10)" data-test-id="decrement-button-10">-10</button>
-<button (click)="decreaseClick.emit(1)" data-test-id="decrement-button-1">-1</button>
+<button (click)="decrementClick.emit(10)" data-test-id="decrement-button-10">-10</button>
+<button (click)="decrementClick.emit(1)" data-test-id="decrement-button-1">-1</button>
 <span class="count" data-test-id="count">{{ count }}</span>
-<button (click)="increaseClick.emit(1)" data-test-id="increment-button-1">+1</button>
-<button (click)="increaseClick.emit(10)" data-test-id="increment-button-10">+10</button>
+<button (click)="incrementClick.emit(1)" data-test-id="increment-button-1">+1</button>
+<button (click)="incrementClick.emit(10)" data-test-id="increment-button-10">+10</button>
 <button (click)="resetClick.emit()" data-test-id="reset-button">reset</button>
