--- a/src/renderer/app/components/counter/counter-container/counter-container.component.html
+++ b/src/renderer/app/components/counter/counter-container/counter-container.component.html
@@ -1,6 +1,6 @@
 <app-counter
   [count]="count$ | async"
-  (increaseClick)="onIncreaseClick($event)"
-  (decreaseClick)="onDecreaseClick($event)"
+  (incrementClick)="onIncrementClick($event)"
+  (decrementClick)="onDecrementClick($event)"
   (resetClick)="onResetClick()"
 ></app-counter>
