Impl tour of heroes

--- a/src/renderer/app/app.component.html
+++ b/src/renderer/app/app.component.html
@@ -21,4 +21,6 @@
       <span>{{ lang.label }}</span>
     </option>
   </select>
+  <h2 translate>hero</h2>
+  <app-heroes-container></app-heroes-container>
 </div>
